# books2skill

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GITHUB_REPO.md  LICENSE  Makefile  QUICKSTART.md  README.md  SKILL.md  docker-compose.yml  extract_pdfs.py  pyproject.toml  requirements.txt  result-card.html  results.tsv  test-prompts.json  test_installation.py
books2skill/: __init__.py  __main__.py
books2skill/config/: __init__.py
books2skill/pipeline/: distill.py
books2skill/utils/: logging.py  status.py
books2skill/validation/: __init__.py  validate_system.py
cangjie/: __init__.py  __main__.py
cangjie/config/: __init__.py
cangjie/pipeline/: distill.py
cangjie/utils/: logging.py  status.py
cangjie/validation/: __init__.py  validate_system.py
extractors/: decision-extractor.md
methodology/: 00-overview.md  01-stage0-adler.md  02-stage1-parallel-extract.md  03-stage1.5-triple-verify.md  07-stage5-multi-book-library.md  07-stage5-multi-book-orchestration.md  08-stage6-decision-cards.md  08-stage6-decision-index.md  09-stage4.5-library-build.md
resolver/: prompts.md
router/: prompts.md
scripts/: check_all_pdf.py  check_docx.py  check_mankiw.py  check_pdf_text.py  detached_runner.py  extract_docx_text.py  extract_pdf_text.py  extract_pdfs.py  install.py  ocr_pdf.py  ocr_pdfs.py  ocr_processor.py  quick_scan.py  scan_mankiw.py  watch_ocr.ps1
templates/: COMPARISON_MATRIX.md.template  CONFLICTS.md.template  DECISION_CARD.md.template  DECISION_INDEX.md.template  GLOBAL_INDEX.md.template  GLOSSARY_UNIFIED.md.template  LIBRARY_OVERVIEW.md.template  orchestration-test-prompts.json.template
tests/: test_backtest.py  test_basic.py  test_market_data.py
